package vn.ghtk.demo.catalog.adapter.inbound.restful.mp.response;

import lombok.Getter;

@Getter
public class AttributeConfigDto {
    private Integer attributeId;
    private String attributeName;
    private Boolean mandatory;

}
