package vn.ghtk.demo.catalog.domain.mp;

import vn.ghtk.demo.catalog.domain.common.DomainIdentity;

public class MasterProductId extends DomainIdentity<Integer> {
    public MasterProductId(Integer id) {
        super(id);
    }
}
