package vn.ghtk.demo.catalog.domain.mp;

public record MasterVariantCode(String code, VariantCodeType type) {
}
